[package]
name = "wikicat-rocket"
version = "0.1.0"
authors = ["dastardlychimp <darien.hess@demochimp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "0.7.3"
tokio = "=0.2.0-alpha.5"
wikicat = { git = "https://github.com/dastardlychimp/wikicat" }
serde_json = "1.0.40"
serde = "1.0.101"

[dependencies.rocket]
version = "0.4.7"
default-features = false

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
